# Tecnicas-de-Ciencia-de-Dados-em-dados-do-Instagram

./: .env.example  .gitignore  README.md  app.py  dashboard (AED).py  dashboard (Modelagem).py  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
config/: settings.py
data/raw/: governadores.xlsx
lambdas/extract/: handler.py  requirements.txt
lambdas/load/: handler.py
lambdas/transform/: handler.py  requirements.txt
legacy/: README.md  migrate_to_medallion.py  pipeline_legacy.py
notebooks/: 01_extracao_e_limpeza_de_dados.ipynb  02_analise_exploratoria.ipynb  03_modelagem.ipynb  03_modelagem_hibrida.ipynb  04_analise_regressao.ipynb  05_visualizacao_e_conclusoes.ipynb  stats.xlsx
pages/: 01_exploratory.py  02_modeling.py
reports/: Dicionário de Dados.xlsx
reports/academic/: Abreviaturas.tex  Abstract.tex  Anexos.tex  IESB-CDeIA-Bibliografia.bib  Resumo.tex  TCC - CD e IA.tex
reports/academic/Capítulos/: Capitulo_01_Introdução.tex  (+6 more)
scripts/: sync_figures_to_tcc.sh
src/: schemas.py  schemas_delta.py
src/analyzes/: AutoClusterHPO.py
src/data_extract/: ETL.py  bronze_writer.py  readers.py  scraper.py
src/features/: build_features.py  comments.py  engagement.py
src/repositories/: base.py  delta_repository.py  excel_repository.py  s3_repository.py
src/visualization/: charts.py  visualize.py
streamlit_app/: dashboard.py
tests/: test_bronze_writer.py  test_comments.py  test_delta_repository.py  test_engagement.py  test_load_lambda.py  test_repository.py  test_silver_cleaners.py  test_transform_lambda.py
(+7 files in other folders)
