[project]
name = "tecnicas-nlp-insta"
version = "0.1.0"
description = "Técnicas de NLP em dados do Instagram"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0,<3.0",
    "apify-client>=1.7",
    "scikit-learn>=1.4",
    "transformers>=4.40",
    "torch>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "hyperopt>=0.2.7",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "bertopic>=0.16",
    "nltk>=3.8",
    "spacy>=3.7",
    "protobuf>=4.0",
    "tiktoken>=0.6",
    "sentencepiece>=0.1.99",
    "sentence-transformers>=3.0",
    "google-generativeai>=0.5",
    "emoji>=2.0",
    "streamlit>=1.35",
    "deltalake>=0.18",
    "pyarrow>=15.0",
    "plotly>=5.0",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "pandas-stubs>=2.0",
    "ruff>=0.4",
]
